--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@ body, html {width:100%; height:100%;}
 .header .header_logo { display: inline-block; transform: scale(1.3);padding: 17px;}
 .header .header_menu{ display: none;}
 .header .header_menu ol{text-align: center;}
-.header .header_menu ol li{display: inline-block; color:rgb(235,235,235); font-size: 25px; text-transform: uppercase; padding: 0px 10px 10px 10px;}
+.header .header_menu ol li{display: inline-block; color:rgb(235,235,235); font-size: 23px; text-transform: uppercase; padding: 0px 10px 10px 10px;}
 
 
 /* content */
@@ -38,7 +38,12 @@ body, html {width:100%; height:100%;}
 
 /* footer */
 
-.footer{line-height: 40px; display: table; clear: both; background: #272727; width: 100%; height: 7%;}
+.footer{position: relative; overflow: hidden; line-height: 40px; display: table; clear: both; background: #272727; width: 100%; min-height: 7%; text-align}
 footer_wrap > div {display: table-cell; width: calc(50vw - 180px);}
-.footer .copyright{font-size:10px;line-height: 10px; font-family: 'Camber-M';color:#6b6b6b;text-align: right; text-transform: uppercase;padding:30px;}
-.copyright p span{white-space: nowrap;}
+.footer .sns{padding: 10px 0 10px 20px;}
+.footer .sns{}
+.footer .sns li{float: left; margin-right:30px; width:30px; height:40px;overflow:hidden;}
+.footer .sns li a{display: block; background-color:rgba(0,0,0,0.2);}
+.footer .sns li span{color:#fff; font-size:1px; line-height:0px;}
+.footer .copyright{ display:block;line-height: 10px; font-family: 'Camber-M';color:#6b6b6b;text-align: right; text-transform: uppercase;padding:10px 30px 0 0;}
+.footer .copyright p span{white-space: nowrap;}
