--- a/main.css
+++ b/main.css
@@ -2,6 +2,23 @@
 
 body, html {width:100%; height:100%;}
 
+#icon_circle {
+    background-color: #999;
+    width: 32px;
+    height: 32px;
+    border-radius: 16px;
+    text-align: center;
+
+}
+
+#icon_circle2 {
+    background-color: rgb(100,100,100);
+    width: 32px;
+    height: 32px;
+    border-radius: 16px;
+    text-align: center;
+}
+
 .wrapper {
     width: 100%;
     position: fixed;
@@ -27,46 +44,95 @@ body, html {width:100%; height:100%;}
     z-index: 1001;
 }
 
-.header .header_logo { display: inline-block; transform: scale(1.3);padding: 17px;}
+.header .header_logo { display: inline-block;padding:13px;}
 .header .header_menu{ display: none;}
 .header .header_menu ol{text-align: center;}
 .header .header_menu ol li{display: inline-block; color:rgb(235,235,235); font-size: 23px; text-transform: uppercase; padding: 0px 10px 10px 10px;}
 
 
 /* content */
-.cont{width: 100%; height: 93%; background: background: #373B44;  /* fallback for old browsers */
-      background: -webkit-linear-gradient(to right, #373B44,#4286f4,);  /* Chrome 10-25, Safari 5.1-6 */
-      background: linear-gradient(to right, #373B44, #4286f4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+.cont {
+    width: 100%;
+    height: 93%;
+    background: background: #373B44;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #373B44, #4286f4, );
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #373B44, #4286f4);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    text-align: center;
+    vertical-align: center;
+}
+.cont .cont_nav{height:auto;width:100%;text-align:center;}
+.cont .cont_nav .header_logo{display: inline-block;padding:13px;}
+.cont .cont_base{ width: 100%; display: inline-table;height:100%;; table-layout: fixed; }
+.cont .cont_base .member{display:table-cell; vertical-align: middle; border: 2px solid white; overflow:hidden; background:#000;}
+.cont .cont_base .member .snip1131 {
+    position: relative;
+    overflow:hidden;
+    width:auto;
+    text-align: center;
+    box-shadow: 0 0 5px rgba(0,0,0,0.15);
+}
+.cont .cont_base .member .snip1132 * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.45s ease-in-out;
+  transition: all 0.45s ease-in-out;
 }
 
-.cont .cont_nav{height:67px;}
+.cont .cont_base .member .snip1132 img {
+
+    max-width: 100%;
+    position: relative;
+    left: 30px;
+    top: 100px;
+    opacity: 0.5;
+    transform: scale(2.8)
+}
+
+.cont .cont_base .member .snip1132 a {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  z-index: 999;
+}
+
+.cont .cont_base .member .snip1132:hover img,
+.cont .cont_base .member .snip1132.hover img {
+  opacity: 1;
+  -webkit-transform: scale(1.15);
+  transform: scale(3);
+}
 
 .cont .gallerylist{ background-color:white; margin:20px; text-align: center; position: relative;width:auto; height:auto;}
- ul {
+.cont .gallerylist ul {
      font-size: 0;
  }
 
- ul > li {
+.cont .gallerylist ul > li {
      display: inline-block;
      vertical-align: top;
      width: 33%;
 
  }
 
- ul > li > a {
+.cont .gallerylist ul > li > a {
      display: block;
      width: auto;
      text-decoration: none;
     margin:17px; 
 }
 
- ul > li > a .screen {
+.cont .gallerylist ul > li > a .screen {
      position: relative;
      overflow: hidden;
  }
 
 
- ul > li > a .screen::after {
+.cont .gallerylist ul > li > a .screen::after {
      content: '';
      display: block;
      position: absolute;
@@ -80,11 +146,11 @@ body, html {width:100%; height:100%;}
      transition: all .35s;
  }
 
- ul > li > a:hover .screen::after {
+.cont .gallerylist ul > li > a:hover .screen::after {
      opacity: 1;
  }
 
- ul > li > a .screen .top {
+.cont .gallerylist ul > li > a .screen .top {
      width:100%;
      position: absolute;
      bottom: 150%;
@@ -99,24 +165,32 @@ body, html {width:100%; height:100%;}
 }
 
 
- ul > li > a .screen img {
+.cont .gallerylist ul > li > a .screen img {
      width: 100%;
      height: auto;
  }
 
- ul > li > a:hover .top {
+.cont .gallerylist ul > li > a:hover .top {
      bottom: 35%;
  }
-ul>li>a .screen p{font-size:26px;text-align: center;}
+.cont .gallerylist ul > li > a .screenp{font-size:26px; text-align: center;}
 
 /* footer */
 
-.footer{position: relative; overflow: hidden; line-height: 40px; display: table; clear: both; background: #272727; width: 100%; min-height: 7%; text-align}
-footer_wrap > div {display: table-cell; width: calc(50vw - 180px);}
-.footer .sns{padding: 10px 0 10px 20px;}
-.footer .sns{}
-.footer .sns li{float: left; margin-right:30px; width:30px; height:40px;overflow:hidden;}
-.footer .sns li a{display: block; background-color:rgba(0,0,0,0.2);}
-.footer .sns li span{color:#fff; font-size:1px; line-height:0px;}
-.footer .copyright{ position:absolute; top:0; right:0; display:block;line-height: 10px; font-family: 'Camber-M';color:#6b6b6b;text-align: right; text-transform: uppercase;padding:30px 30px 0 0;}
+.footer{position: relative; overflow: hidden; display: table; clear: both; background: #272727; width: 100%; height: 7%; z-index:1000;}
+.footer > div {display: table-cell; vertical-align: middle;}
+.footer .sns{line-height: 10px; z-index: 1002;}
+.footer .sns .clearfy{margin-left:20px;}
+.footer .sns li{float: left; margin-right:10px; width:32px; height:32px;overflow:hidden; transform: scale(0.8);}
+.footer .sns .twit{background: url(/BTS/icon/icon.png);}
+.footer .sns .twit{background: url(icon/icon.png);}
+.footer .sns .facebook{background:url(icon/facebook.png)}
+.footer .sns .instagram{background:url(icon/instagram.png);}
+.footer .sns .youtube{background: url(icon/youtube.png);}
+.footer .sns li a{z-index: 1003; display: block; background-color:rgba(0,0,0,0.2); width:32px; height:32px;}
+.footer .sns li a:hover{background-color: #fff; }
+.footer .sns li span{color:#fff; font-size:1px;}
+.footer .copyright{ font-size: 10px; font-family: 'Camber-M';
+    color:#6b6b6b;text-align: right; text-transform: uppercase;}
 .footer .copyright p span{white-space: nowrap;}
+#last{margin-right:20px;}
