--- a/main.css
+++ b/main.css
@@ -22,14 +22,14 @@ body, html {width:100%; height:100%;}
 .wrapper {
     width: 100%;
     position: fixed;
-    z-index: 10;
+    z-index: 1999;
     background: inherit;
-    height: 100%;
+    height: auto;
 }
 .bottom_wrapper {
     width: 100%;
     height: 100%;
-    z-index: 5;
+    z-index: 900;
     overflow: hidden;
 }
 
@@ -41,7 +41,7 @@ body, html {width:100%; height:100%;}
     height: auto;
     background: rgba(0,0,0,0.2);
     text-align: center;
-    z-index: 1001;
+    z-index: 2000;
 }
 
 .header .header_logo { display: inline-block;padding:13px;}
@@ -66,7 +66,7 @@ body, html {width:100%; height:100%;}
 .cont .cont_nav{height:auto;width:100%;text-align:center;}
 .cont .cont_nav .header_logo{display: inline-block;padding:13px;}
 .cont .cont_base{ width: 100%; display: inline-table;height:100%;; table-layout: fixed; }
-.cont .cont_base .member{display:table-cell; vertical-align: middle; border: 2px solid white; overflow:hidden; background:#000;}
+.cont .cont_base .member{display:table-cell; vertical-align: middle; border: 2px solid white; overflow:hidden; background:#000; z-index:998}
 .cont .cont_base .member .snip1131 {
     position: relative;
     overflow:hidden;
@@ -81,99 +81,103 @@ body, html {width:100%; height:100%;}
   transition: all 0.45s ease-in-out;
 }
 
-.cont .cont_base .member .snip1132 img {
+.cont .cont_base .member .snip1132 a{width:100%;height:100%;z-index:1020;}
 
-    max-width: 100%;
+.cont .cont_base .member .snip1132 img{
+    width:100%;
+    overflow: hidden;
+}
+
+.cont .cont_base #RM .snip1132 img.RM {
     position: relative;
-    left: 30px;
-    top: 100px;
     opacity: 0.5;
-    transform: scale(2.8)
+    transform: scale(2.3);
 }
 
-.cont .cont_base .member .snip1132 a {
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  position: absolute;
-  z-index: 999;
-}
 
-.cont .cont_base .member .snip1132:hover img,
-.cont .cont_base .member .snip1132.hover img {
+.cont .cont_base #RM .snip1132:hover img.RM{
   opacity: 1;
   -webkit-transform: scale(1.15);
-  transform: scale(3);
+  transform: scale(2.5);
 }
 
-.cont .gallerylist{ background-color:white; margin:20px; text-align: center; position: relative;width:auto; height:auto;}
-.cont .gallerylist ul {
-     font-size: 0;
- }
-
-.cont .gallerylist ul > li {
-     display: inline-block;
-     vertical-align: top;
-     width: 33%;
-
- }
-
-.cont .gallerylist ul > li > a {
-     display: block;
-     width: auto;
-     text-decoration: none;
-    margin:17px; 
-}
-
-.cont .gallerylist ul > li > a .screen {
-     position: relative;
-     overflow: hidden;
- }
-
-
-.cont .gallerylist ul > li > a .screen::after {
-     content: '';
-     display: block;
-     position: absolute;
-     top: 0;
-     left: 0;
-     width: 100%;
-     height: 100%;
-     background: rgba(0, 0, 0, 0.8);
-     z-index: 100;
-     opacity: 0;
-     transition: all .35s;
- }
-
-.cont .gallerylist ul > li > a:hover .screen::after {
-     opacity: 1;
- }
-
-.cont .gallerylist ul > li > a .screen .top {
-     width:100%;
-     position: absolute;
-     bottom: 150%;
-     left: 0px;
-     z-index: 101;
-     text-align: center;
-     color: white;
-     font-size: 12px;
-     font-weight: 900;
-     transition: all .35s;
-     text-transform:uppercase;
+.cont .cont_base #SG .snip1132 img.SG {
+    position: relative;
+    right:40px;
+    opacity: 0.5;
+    transform: scale(2.3);
 }
 
 
-.cont .gallerylist ul > li > a .screen img {
-     width: 100%;
-     height: auto;
- }
+.cont .cont_base #SG .snip1132:hover img.SG{
+  opacity: 1;
+  -webkit-transform: scale(1.15);
+  transform: scale(2.5);
+}
 
-.cont .gallerylist ul > li > a:hover .top {
-     bottom: 35%;
- }
-.cont .gallerylist ul > li > a .screenp{font-size:26px; text-align: center;}
+.cont .cont_base #JH .snip1132 img.JH {
+    position: relative;
+    opacity: 0.5;
+    transform: scale(2.3);
+}
+
+.cont .cont_base #JH .snip1132:hover img.JH{
+  opacity: 1;
+  -webkit-transform: scale(1.15);
+  transform: scale(2.5);
+}
+
+.cont .cont_base #Jin .snip1132 img.Jin {
+    position: relative;
+    left:40px;
+    opacity: 0.5;
+    transform: scale(2.3);
+}
+
+.cont .cont_base #Jin .snip1132:hover img.Jin{
+  opacity: 1;
+  -webkit-transform: scale(1.15);
+  transform: scale(2.5);
+}
+
+.cont .cont_base #JK .snip1132 img.JK {
+    position: relative;
+    left:10px;
+    opacity: 0.5;
+    transform: scale(2.3);
+}
+
+.cont .cont_base #JK .snip1132:hover img.JK{
+  opacity: 1;
+  -webkit-transform: scale(1.15);
+  transform: scale(2.5);
+}
+
+.cont .cont_base #V .snip1132 img.V {
+    position: relative;
+    opacity: 0.5;
+    transform: scale(2.3);
+}
+
+.cont .cont_base #V .snip1132:hover img.V{
+  opacity: 1;
+  -webkit-transform: scale(1.15);
+  transform: scale(2.5);
+}
+
+.cont .cont_base #JM .snip1132 img.JM {
+    position: relative;
+    left:40px;
+    opacity: 0.5;
+    transform: scale(2.3);
+}
+
+.cont .cont_base #JM .snip1132:hover img.JM{
+  opacity: 1;
+  -webkit-transform: scale(1.15);
+  transform: scale(2.5);
+}
+
 
 /* footer */
 
