--- a/main.css
+++ b/main.css
@@ -25,11 +25,12 @@ body, html {width:100%; height:100%;}
     z-index: 1999;
     background: inherit;
     height: auto;
+    z-index:1999;
 }
 .bottom_wrapper {
     width: 100%;
     height: 100%;
-    z-index: 900;
+    z-index: 1;
     overflow: hidden;
 }
 
@@ -44,7 +45,7 @@ body, html {width:100%; height:100%;}
     z-index: 2000;
 }
 
-.header .header_logo { display: inline-block;padding:13px;}
+.header .header_logo { display: inline-block;padding:13px; z-index:2001;}
 .header .header_menu{ display: none;}
 .header .header_menu ol{text-align: center;}
 .header .header_menu ol li{display: inline-block; color:rgb(235,235,235); font-size: 23px; text-transform: uppercase; padding: 0px 10px 10px 10px;}
@@ -66,7 +67,7 @@ body, html {width:100%; height:100%;}
 .cont .cont_nav{height:auto;width:100%;text-align:center;}
 .cont .cont_nav .header_logo{display: inline-block;padding:13px;}
 .cont .cont_base{ width: 100%; display: inline-table;height:100%;; table-layout: fixed; }
-.cont .cont_base .member{display:table-cell; vertical-align: middle; border: 2px solid white; overflow:hidden; background:#000; z-index:998}
+.cont .cont_base .member{display:table-cell; vertical-align: middle; border: 2px solid white; overflow:hidden; background:#000; z-index:998;}
 .cont .cont_base .member .snip1131 {
     position: relative;
     overflow:hidden;
@@ -81,7 +82,7 @@ body, html {width:100%; height:100%;}
   transition: all 0.45s ease-in-out;
 }
 
-.cont .cont_base .member .snip1132 a{width:100%;height:100%;z-index:1020;}
+.cont .cont_base .member .snip1132 a{}
 
 .cont .cont_base .member .snip1132 img{
     width:100%;
@@ -181,7 +182,8 @@ body, html {width:100%; height:100%;}
 
 /* footer */
 
-.footer{position: relative; overflow: hidden; display: table; clear: both; background: #272727; width: 100%; height: 7%; z-index:1000;}
+.footer{position: relative; overflow: hidden; display: table; clear: both; background: #272727; width: 100%;  z-index:1000; height: 48px;}
+.profile-footer{height: 7%;}
 .footer > div {display: table-cell; vertical-align: middle;}
 .footer .sns{line-height: 10px; z-index: 1002;}
 .footer .sns .clearfy{margin-left:20px;}
