--- a/main.css
+++ b/main.css
@@ -63,15 +63,15 @@ body, html {width:100%; height:100%;}
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     text-align: center;
     vertical-align: center;
+    overflow: hidden;
 }
 .cont .cont_nav{height:auto;width:100%;text-align:center;}
-.cont .cont_nav .header_logo{display: inline-block;padding:13px;}
-.cont .cont_base{ width: 100%; display: inline-table;height:100%;; table-layout: fixed; }
-.cont .cont_base .member{display:table-cell; vertical-align: middle; border: 2px solid white; overflow:hidden; background:#000; z-index:998;}
+.cont .cont_nav .header_logo{display: block;padding:13px;}
+.cont .cont_base{ width: 100%; display: table; table-layout: fixed; overflow: hidden;}
+.cont .cont_base .member{display:table-cell; vertical-align: middle; border:3px solid #fff; overflow:hidden; background:#000; z-index:100;}
 .cont .cont_base .member .snip1131 {
     position: relative;
     overflow:hidden;
-    width:auto;
     text-align: center;
     box-shadow: 0 0 5px rgba(0,0,0,0.15);
 }
@@ -80,110 +80,121 @@ body, html {width:100%; height:100%;}
   box-sizing: border-box;
   -webkit-transition: all 0.45s ease-in-out;
   transition: all 0.45s ease-in-out;
+    overflow: hidden;
 }
 
 .cont .cont_base .member .snip1132 a{}
 
 .cont .cont_base .member .snip1132 img{
-    width:100%;
     overflow: hidden;
 }
 
 .cont .cont_base #RM .snip1132 img.RM {
     position: relative;
+    right:200px;
+    bottom:100px;
     opacity: 0.5;
-    transform: scale(2.3);
+    transform: scale(0.8);
 }
 
 
 .cont .cont_base #RM .snip1132:hover img.RM{
   opacity: 1;
   -webkit-transform: scale(1.15);
-  transform: scale(2.5);
+  transform: scale(0.9);
 }
 
 .cont .cont_base #SG .snip1132 img.SG {
     position: relative;
-    right:40px;
+    right:250px;
+    bottom:120px;
     opacity: 0.5;
-    transform: scale(2.3);
+    transform: scale(0.8);
 }
 
 
 .cont .cont_base #SG .snip1132:hover img.SG{
   opacity: 1;
   -webkit-transform: scale(1.15);
-  transform: scale(2.5);
+  transform: scale(0.85);
 }
 
 .cont .cont_base #JH .snip1132 img.JH {
     position: relative;
+    right:220px;
+    bottom:120px;
     opacity: 0.5;
-    transform: scale(2.3);
+    transform: scale(0.8);
 }
 
 .cont .cont_base #JH .snip1132:hover img.JH{
   opacity: 1;
   -webkit-transform: scale(1.15);
-  transform: scale(2.5);
+  transform: scale(0.85);
 }
 
 .cont .cont_base #Jin .snip1132 img.Jin {
     position: relative;
-    left:40px;
+    right:165px;
+    bottom:100px;
     opacity: 0.5;
-    transform: scale(2.3);
+    transform: scale(0.8);
 }
 
 .cont .cont_base #Jin .snip1132:hover img.Jin{
   opacity: 1;
   -webkit-transform: scale(1.15);
-  transform: scale(2.5);
+  transform: scale(0.85);
 }
 
 .cont .cont_base #JK .snip1132 img.JK {
     position: relative;
-    left:10px;
+    right:200px;
+    bottom:100px;
     opacity: 0.5;
-    transform: scale(2.3);
+    transform: scale(0.8);
 }
 
 .cont .cont_base #JK .snip1132:hover img.JK{
   opacity: 1;
   -webkit-transform: scale(1.15);
-  transform: scale(2.5);
+  transform: scale(0.85);
 }
 
 .cont .cont_base #V .snip1132 img.V {
     position: relative;
+    right:230px;
+    bottom:95px;
     opacity: 0.5;
-    transform: scale(2.3);
+    transform: scale(0.8);
 }
 
 .cont .cont_base #V .snip1132:hover img.V{
   opacity: 1;
   -webkit-transform: scale(1.15);
-  transform: scale(2.5);
+  transform: scale(0.85);
 }
 
 .cont .cont_base #JM .snip1132 img.JM {
     position: relative;
-    left:40px;
+    right:150px;
+    bottom:128px;
     opacity: 0.5;
-    transform: scale(2.3);
+    transform: scale(0.8);
 }
 
 .cont .cont_base #JM .snip1132:hover img.JM{
   opacity: 1;
   -webkit-transform: scale(1.15);
-  transform: scale(2.5);
+  transform: scale(0.85);
 }
 
-
+.cont .profile{}
 /* footer */
 
-.footer{position: relative; overflow: hidden; display: table; clear: both; background: #272727; width: 100%;  z-index:1000; height: 48px;}
-.profile-footer{height: 7%;}
+.footer{position: relative; overflow: hidden; display: table; clear: both; background: #272727; width: 100%;  z-index:1000; }
+#profile{height: 7%;}
+#reguler{height:48px;}
 .footer > div {display: table-cell; vertical-align: middle;}
 .footer .sns{line-height: 10px; z-index: 1002;}
 .footer .sns .clearfy{margin-left:20px;}
