--- a/reset.css
+++ b/reset.css
@@ -60,3 +60,11 @@ h1,h2,h3,h4,h5,h6{font-size:13px; color:#222; font-weight: normal;}
 }
 
 /* 대체 텍스트가 아닌 접근성을 위한 숨김 텍스트를 제공할 때 */
+
+
+button{
+    cursor: pointer;
+    display:block;
+    border:none;
+    box-shadow: none;
+}
