--- a/main.css
+++ b/main.css
@@ -85,7 +85,7 @@ body, html {width:100%; height:100%;}
 
 .cont .cont-base .member .snip1132 a{}
 
-.cont .cont-base .member .snip1132 input{width:100%;height:100%;position:absolute;top:0;left:0; background:rgba(0,0,0,0);}
+.cont .cont-base .member .snip1132{}
 
 .cont .cont-base .member .snip1132 img{
     overflow: hidden;
@@ -191,24 +191,25 @@ body, html {width:100%; height:100%;}
   transform: scale(0.85);
 }
 
-.cont #profile{background:#fff; position: absolute; top:50%; left:50%; transform: translate(-50%,-50%);width:80%; height:80%;overflow:hidden;}
+.cont #profile {position: absolute; top:50%; left:50%; transform: translate(-50%,-50%); width: 100%; height:100%;}
 .cont #profile .dimmed {
-    z-index:10;
     position: fixed;
     top: 0;
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.4);
+    background: rgba(0, 0, 0, 0.5);
 }
-.profile-inner{z-index: 15;}
-.profile-inner ul {width:100%; height:100%;}
-.profile-inner ul > li{width:100%;height:100%; }
-.profile-inner ul > li .photo {display:inline-block;}
-.profile-inner ul > li .photo img{ height:482px; width:auto; }
+.profile-inner{position: absolute; top:50%; left:50%; transform: translate(-50%,-50%); width:1072px;height:536px; overflow:hidden;}
+.profile-inner ul {}
+.profile-inner ul > li{display:table; table-layout: fixed;}
+.profile-inner ul > li > div{display:table-cell;}
+.profile-inner ul > li .photo {background:#fff;}
+.profile-inner ul > li > .photo > img{height:536px;}
 
-.profile-inner ul > li .profile-contents{background:rgba(66,134,244,0.5); display:inline-block;}
+.profile-inner ul > li .profile-contents{width:536px; background:rgba(66,134,244,0.8); vertical-align: middle;text-align: left;}
+.profile-inner ul > li .profile-contents h3{color:#fff; font-size:50px;}
 .profile-inner ul > li .btn-close {
     position: absolute;
     top: 0;
@@ -218,7 +219,6 @@ body, html {width:100%; height:100%;}
     border-radius: 50vh;
     background: rgba(0, 0, 0, 0.2) url("https://ibighit.com/bts/images/btn-close.png") no-repeat center;
     background-size: 100% auto;
-    z-index: 20;
 }
 /* footer */
 
