--- a/main2.css
+++ b/main2.css
@@ -97,102 +97,102 @@ body, html {width:100%; height:100%;}
 
 .cont .cont-base #RM .snip1132 img.RM {
     position: relative;
-    right:200px;
-    bottom:100px;
+    right:350px;
     opacity: 0.5;
-    transform: scale(0.8);
+    transform: scale(1);
 }
 
 
 .cont .cont-base #RM .snip1132:hover img.RM{
+    filter:brightness(130%);
   opacity: 1;
   -webkit-transform: scale(1.15);
-  transform: scale(0.9);
+  transform: scale(1.05);
 }
 
 .cont .cont-base #SG .snip1132 img.SG {
     position: relative;
-    right:250px;
-    bottom:120px;
+    right:350px;
     opacity: 0.5;
-    transform: scale(0.8);
+    transform: scale(1);
 }
 
 
 .cont .cont-base #SG .snip1132:hover img.SG{
+    filter:brightness(130%);
   opacity: 1;
   -webkit-transform: scale(1.15);
-  transform: scale(0.85);
+  transform: scale(1.05);
 }
 
 .cont .cont-base #JH .snip1132 img.JH {
     position: relative;
-    right:220px;
-    bottom:120px;
+    right:450px;
     opacity: 0.5;
-    transform: scale(0.8);
+    transform: scale(1);
 }
 
 .cont .cont-base #JH .snip1132:hover img.JH{
+    filter:brightness(130%);
   opacity: 1;
   -webkit-transform: scale(1.15);
-  transform: scale(0.85);
+  transform: scale(1.05);
 }
 
 .cont .cont-base #Jin .snip1132 img.Jin {
     position: relative;
-    right:165px;
-    bottom:100px;
+    right:450px;
     opacity: 0.5;
-    transform: scale(0.8);
+    transform: scale(1);
 }
 
 .cont .cont-base #Jin .snip1132:hover img.Jin{
+    filter:brightness(130%);
   opacity: 1;
   -webkit-transform: scale(1.15);
-  transform: scale(0.85);
+  transform: scale(1.05);
 }
 
 .cont .cont-base #JK .snip1132 img.JK {
     position: relative;
-    right:200px;
-    bottom:100px;
+    right:400px;
     opacity: 0.5;
-    transform: scale(0.8);
+    transform: scale(1);
 }
 
 .cont .cont-base #JK .snip1132:hover img.JK{
+    filter:brightness(130%);
   opacity: 1;
   -webkit-transform: scale(1.15);
-  transform: scale(0.85);
+  transform: scale(1.05);
 }
 
 .cont .cont-base #V .snip1132 img.V {
     position: relative;
-    right:230px;
-    bottom:95px;
+    right:400px;
     opacity: 0.5;
-    transform: scale(0.8);
+    transform: scale(1);
 }
 
 .cont .cont-base #V .snip1132:hover img.V{
+    filter:brightness(130%);
   opacity: 1;
   -webkit-transform: scale(1.15);
-  transform: scale(0.85);
+  transform: scale(1.05);
 }
 
 .cont .cont-base #JM .snip1132 img.JM {
     position: relative;
-    right:150px;
-    bottom:118px;
+    right:420px;
     opacity: 0.5;
-    transform: scale(0.8);
+    transform: scale(1);
 }
 
 .cont .cont-base #JM .snip1132:hover img.JM{
+    filter:brightness(130%);
   opacity: 1;
   -webkit-transform: scale(1.15);
-  transform: scale(0.85);
+  transform: scale(1.05);
 }
 
 .cont #profile {position: absolute; top:50%; left:50%; transform: translate(-50%,-50%); width: 100%; height:100%;}
