--- a/base.css
+++ b/base.css
@@ -1,6 +1,11 @@
 @charset "utf-8";
 
-body, html {width:100%; height:100%;}
+@font-face { font-family: 'NEXON Lv2 Gothic Bold'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv2 Gothic Bold.woff') format('woff'); font-weight: normal; font-style: normal; }
+body, html {width:100%; height:100%; }
+
+@font-face { font-family: 'GmarketSansBold'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansBold.woff') format('woff'); font-weight: normal; font-style: normal; }
+
+@font-face { font-family: 'InfinitySans-BoldA1'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/InfinitySans-BoldA1.woff') format('woff'); font-weight: normal; font-style: normal; }
 
 
 .wrapper {
@@ -13,13 +18,13 @@ body, html {width:100%; height:100%;}
 }
 .bottom_wrapper {
     width: 100%;
+    height: 100%;
     z-index: 1;
     overflow: hidden;
-
 }
 
 /* header */
-.header {
+#header {
     width: 100%;
     min-width:320px;
     position: fixed;
@@ -29,63 +34,50 @@ body, html {width:100%; height:100%;}
     z-index: 2000;
 }
 
-.header .header_logo { display: inline-block;padding:13px; z-index:2001;}
-.header .header_menu{ display: none;}
-.header .header_menu ol{text-align: center;}
-.header .header_menu ol li{display: inline-block; color:rgb(235,235,235); font-size: 23px; text-transform: uppercase; padding: 0px 10px 10px 10px;}
+#header #header-logo { display: inline-block;padding:13px; z-index:2001;}
+#header #header-menu{display:none;}
+#header #header-menu ol{text-align: center;}
+#header #header-menu ol li{display: inline-block; color:rgb(235,235,235); font-size: 23px; text-transform: uppercase; padding: 0px 10px 10px 10px;}
 
 
-/* content */
-
-.cont .cont_nav{height:auto;width:100%;text-align:center;}
-.cont .cont_nav .header_logo{display: inline-block;padding:13px;}
-.cont .cont_nav .header_logo img{opacity:0;}
-.cont {
-    width: 100%;
-    background: background: #373B44;
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #373B44, #4286f4, );
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #373B44, #4286f4);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    text-align: center;
-    vertical-align: center;
-}
 
 /* footer */
 
-.footer{position: relative; overflow: hidden; display: table; clear: both; background: #272727; width: 100%; height: 48px; z-index:1000;}
-.profile-footer{height:7%;}
+.footer{position: relative; overflow: hidden; display: table; clear: both; background: #272727; width: 100%;  z-index:1000; }
+#profile-footer{height: 8%;}
+#reguler{height:48px;}
 .footer > div {display: table-cell; vertical-align: middle;}
 .footer .sns{line-height: 10px; z-index: 1002;}
 .footer .sns .clearfy{margin-left:20px;}
-.footer .sns li{float: left; margin-right:10px; width:32px; height:32px;overflow:hidden; transform: scale(0.8);}
-.footer .sns .twit{background: url(/BTS/icon/icon.png);}
-.footer .sns .twit{background: url(icon/icon.png);}
-.footer .sns .facebook{background:url(icon/facebook.png)}
-.footer .sns .instagram{background:url(icon/instagram.png);}
-.footer .sns .youtube{background: url(icon/youtube.png);}
-.footer .sns li a{z-index: 1003; display: block; background-color:rgba(0,0,0,0.2); width:32px; height:32px;}
-.footer .sns li a:hover{background-color: #fff; }
-.footer .sns li span{color:#fff; font-size:1px;}
+.footer .sns li{float: left; margin-right:10px; width:30px; height:30px;overflow:hidden; background-color:rgba(200,200,200,0,8);}
+
+.footer .sns .twit{background: url(icon/twit_bighit_1.png);background-position: center; background-size: 100% auto;}
+.footer .sns .twit:hover{background: url(icon/twit_bighit_2.png); background-position: center; background-size: 100% auto;}
+
+.footer .sns .twit-m{background: url(icon/twitter_member_1.png);background-position: center; background-size: 100% auto;}
+.footer .sns .twit-m:hover{background: url(icon/twitter_member_2.png); background-position: center; background-size: 100% auto;}
+
+.footer .sns .facebook{background:url(icon/facebook_1.png); background-position:center; background-size:100% auto; }
+.footer .sns .facebook:hover{background: url(icon/facebook_2.png); background-position: center; background-size: 100% auto;}
+
+.footer .sns .instagram{background:url(icon/instagram_1.png); background-position:center; background-size:100% auto;}
+.footer .sns .instagram:hover{background:url(icon/instagram_2.png); background-position: center; background-size: 100% auto;}
+
+.footer .sns .youtube{background: url(icon/youtube_bighit_1.png); background-position:center; background-size:100% auto;}
+.footer .sns .youtube:hover{background: url(icon/youtube_bighit_2.png); background-position: center; background-size: 100% auto;}
+
+.footer .sns .youtube-m{background: url(icon/youtube_bttv_1.png); background-position:center; background-size:100% auto;}
+.footer .sns .youtube-m:hover{background: url(icon/youtube_bttv_2.png); background-position: center; background-size: 100% auto;}
+
+.footer .sns .soundcloud{background: url(icon/soundcloud_1.png); background-position:center; background-size:80% auto; background-repeat: no-repeat;}
+.footer .sns .soundcloud:hover{background: url(icon/soundcloud_2.png); background-position: center; background-size: 80% auto; background-repeat: no-repeat;}
+
+.footer .sns li a{z-index: 1003; display: block; width:30px; height:30px; border-radius: 15px; }
+
+.footer .family-site{}
+.footer .family-site div{position: absolute; top:50%; left:50%; transform: translate(-50%,-50%); border-bottom:1px solid rgba(255,255,255,0.2);width:25%; text-align: center;}
+.footer .family-site div > a > h3{text-align: center; font-family:'InfinitySans-BoldA1'; font-size:20px; text-transform: uppercase; color: #929191; padding-bottom: 4px;}
 .footer .copyright{ font-size: 10px; font-family: 'Camber-M';
     color:#6b6b6b;text-align: right; text-transform: uppercase;}
 .footer .copyright p span{white-space: nowrap;}
 #last{margin-right:20px;}
-
-#icon_circle {
-    background-color: #999;
-    width: 32px;
-    height: 32px;
-    border-radius: 16px;
-    text-align: center;
-
-}
-
-#icon_circle2 {
-    background-color: rgb(100,100,100);
-    width: 32px;
-    height: 32px;
-    border-radius: 16px;
-    text-align: center;
-}
